# BlackJack

./: BlackJack.sln  CMakeLists.txt
BlackJack/: BlackJack.vcxproj  BlackJack.vcxproj.filters  Card.cpp  Card.h  CardManager.cpp  CardManager.h  Delay.h  Main.cpp  Utils.cpp
BlackJack/Debug/: vc141.idb
BlackJack/Debug/BlackJack.tlog/: BlackJack.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
